<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="12dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Spinner
        android:id="@+id/spinnerRegion"
        android:layout_width="384dp"
        android:layout_height="53dp" />

    <CheckBox
        android:id="@+id/checkTopTeams"
        android:text="@string/top_teams"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <RadioGroup
        android:id="@+id/radioRanking"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/radioAsc"
            android:text="@string/ascending"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <RadioButton
            android:id="@+id/radioDesc"
            android:text="@string/descending"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RadioGroup>

    <Button
        android:id="@+id/btnFilter"
        android:layout_width="381dp"
        android:layout_height="65dp"
        android:text="@string/filter" />

    <ListView
        android:id="@+id/listTeams"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>