<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="24dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Switch
        android:id="@+id/switchNotifications"
        android:layout_width="361dp"
        android:layout_height="48dp"
        android:text="@string/enable_notifications"/>

    <CheckBox
        android:id="@+id/checkDarkMode"
        android:text="@string/dark_mode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Spinner
        android:id="@+id/spinnerLanguage"
        android:layout_width="363dp"
        android:layout_height="51dp" />

    <Button
        android:id="@+id/btnSaveSettings"
        android:text="@string/save_settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>